[gd_scene load_steps=2 format=3 uid="uid://k082tw417vme"]

[ext_resource type="Script" uid="uid://d01sn0enqr14t" path="res://setting.gd" id="1_xxxxx"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="EndButtton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "End game"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EndButtton" to="." method="_on_end_buttton_pressed"]
